Bug 711839 - --disable-ogg configure option breaks build after bug 689834. r=bz